# bah2026-ps14

./: .gitignore  ARCHITECTURE.md  CONTRACTS.md  Makefile  README.md  idea.md  pyproject.toml
config/: default.yaml
config/model/: baseline.yaml  nhits.yaml  tft.yaml
docs/research/: 01_domain_science.md  02_satellite_data_catalog.md  03_ml_forecasting_sota.md  04_fast_platform_engineering.md  05_cdf_data_engineering.md
reports/: metrics.csv  metrics.md  metrics_climatology.csv  metrics_climatology.json  metrics_lightgbm.csv  metrics_lightgbm.json  metrics_persistence.csv  metrics_persistence.json  metrics_refm.csv  metrics_refm.json  metrics_tft.csv  metrics_tft.json  real_data_demo.md
scripts/: real_data_demo.py  run_demo.py  smoke_serving.py
src/ps14/: __init__.py  cli.py  config.py  constants.py  evaluate.py  metrics.py  pipeline.py  train.py
src/ps14/dashboard/: __init__.py  app.py
src/ps14/datasets/: __init__.py  schema.py  windowing.py
src/ps14/features/: __init__.py  offline.py  online.py
src/ps14/io/: __init__.py  cdaweb.py  cdf_reader.py  hapi.py  swpc_realtime.py  synthetic.py
src/ps14/models/: __init__.py  base.py  baselines.py  foundation.py  nhits.py  tft.py
src/ps14/preprocess/: __init__.py  align.py  clean.py  resample.py  transform.py
src/ps14/serve/: __init__.py  api.py  inference.py  scheduler.py
src/ps14/utils/: __init__.py  logging.py  timeops.py
tests/: __init__.py  test_baselines.py  test_cdf_reader.py  test_features_online.py  test_metrics.py  test_preprocess.py  test_schema.py  test_serve.py  test_synthetic.py  test_windowing.py
