[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ps14"
version = "0.1.0"
description = "Forecasting the >2 MeV energetic electron radiation environment at geostationary orbit (BAH-2026 PS-14)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BAH-2026 PS-14 Team" }]
keywords = ["space-weather", "radiation-belt", "forecasting", "GOES", "time-series", "CDF"]

# Core dependencies: enough to read CDF, preprocess, build features/windows, run
# baselines, evaluate, and generate synthetic data fully offline. Deep-learning,
# real-data fetching, serving, and dashboard live in optional extras below.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pyarrow>=12",
    "xarray>=2023.1",
    "cdflib>=1.2",
    "pyyaml>=6",
    "pydantic>=2",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "duckdb>=0.9",
]

[project.optional-dependencies]
# Deep-learning primary (TFT) + backups + ONNX export/inference.
dl = [
    "torch>=2.1",
    "pytorch-lightning>=2.1",
    "pytorch-forecasting>=1.0",
    "lightgbm>=4.0",
    "onnx>=1.15",
    "onnxruntime>=1.16",
]
# Real-data fetching (optional; the system runs offline on synthetic data without these).
data = [
    "cdasws>=1.8",
    "pyspedas>=1.5",
    "hapiclient>=0.2",
    "sunpy>=5.0",
    "requests>=2.31",
]
# Serving stack.
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "apscheduler>=3.10",
    "redis>=5.0",
]
# Dashboard.
viz = [
    "streamlit>=1.37",
]
# Dev tooling.
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.5",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
ps14 = "ps14.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ps14"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "NPY", "W"]
ignore = ["B905"]  # zip without strict= (py<3.10 compat in some helpers)

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
# Optional-dependency shims (serve/dashboard) carry conditional `# type: ignore`s that are
# needed only when the extra is installed; keep warn_unused_ignores off so the core env
# (extras absent) doesn't flag them.
warn_unused_ignores = false
ignore_missing_imports = true
